--- a/main/web_root/errors/502.html
+++ b/main/web_root/errors/502.html
@@ -20,8 +20,9 @@
  </head>
 
  <body>
-	<img alt="" class="pure-img float-right" src="/img/company-logo.png">
-	<h1>Chrrrr ... Mediaclue macht Pause. Schauen Sie später nochmals vorbei.</h1>
+	<img alt="" class="pure-img" src="/img/company-logo.png">
+	<h3>Chrrrr ... Mediaclue macht Pause.</h3>
+	<p>Schauen Sie später nochmals vorbei.</p>
  </body>
 
 </html>
